Enhance Redis connection with heartbeat and advanced persistence options

--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,13 @@ REDIS_URL=redis://username:password@host:port
 # REDIS_CONNECT_TIMEOUT=30000
 
 # Keep-alive interval in milliseconds (optional, default: 5000)
-# REDIS_KEEP_ALIVE=5000 
+# REDIS_KEEP_ALIVE=5000
+
+# Heartbeat interval in milliseconds (optional, default: 30000)
+# REDIS_HEARTBEAT_INTERVAL=30000
+
+# Redis ping interval in milliseconds (optional, default: 1000)
+# REDIS_PING_INTERVAL=1000
+
+# Redis command timeout in milliseconds (optional, default: 5000)
+# REDIS_COMMAND_TIMEOUT=5000 
