Implement ultra-aggressive Redis connection persistence strategy

--- a/.env.example
+++ b/.env.example
@@ -21,4 +21,13 @@ REDIS_URL=redis://username:password@host:port
 # REDIS_PING_INTERVAL=1000
 
 # Redis command timeout in milliseconds (optional, default: 5000)
-# REDIS_COMMAND_TIMEOUT=5000 
+# REDIS_COMMAND_TIMEOUT=5000
+
+# Persistence check interval in milliseconds (optional, default: 60000)
+# REDIS_PERSISTENCE_INTERVAL=60000
+
+# Maximum reconnect attempts before forcing clean reconnection (optional, default: 5)
+# REDIS_MAX_RECONNECT_ATTEMPTS=5
+
+# Force TLS verification (optional, default: false for rediss:// URLs)
+# REDIS_TLS_VERIFY=false 
