--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
   "crons": [
     {
       "path": "/api/cron-keep-alive",
-      "schedule": "*/5 * * * *"
+      "schedule": "0 0 * * *"
     }
   ]
 }
