--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.6.0",
+    "express": "^5.0.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
