Update package.json with start script and dependencies for Railway deployment

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,8 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.6.1",
     "content-type": "^1.0.5",
+    "express": "^4.18.3",
+    "http-proxy-middleware": "^2.0.6",
     "raw-body": "^3.0.0",
     "redis": "^4.7.0",
     "zod": "^3.24.2"
