Prepare package for npm publishing

--- a/package.json
+++ b/package.json
@@ -1,15 +1,33 @@
 {
-  "name": "mcp-on-vercel",
+  "name": "payload-cms-mcp",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Payload CMS 3.0 MCP Server - A specialized Model Context Protocol server for Payload CMS",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node server.js",
+    "local": "node server.js",
+    "prepublishOnly": "npm test"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "payload-cms",
+    "mcp",
+    "model-context-protocol",
+    "ai",
+    "cursor-ide",
+    "headless-cms"
+  ],
+  "author": "MATMAX WORLDWIDE",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Matmax-Worldwide/payloadcmsmcp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Matmax-Worldwide/payloadcmsmcp/issues"
+  },
+  "homepage": "https://www.payloadcmsmcp.info",
   "packageManager": "pnpm@8.15.7+sha512.c85cd21b6da10332156b1ca2aa79c0a61ee7ad2eb0453b88ab299289e9e8ca93e6091232b25c07cbf61f6df77128d9c849e5c9ac6e44854dbd211c49f3a67adc",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.6.1",
@@ -23,5 +41,8 @@
   "devDependencies": {
     "@types/node": "^22.13.10",
     "vercel": "^41.4.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
