Add npm global installation support and update documentation

--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "Payload CMS 3.0 MCP Server - A specialized Model Context Protocol server for Payload CMS",
   "main": "server.js",
+  "bin": {
+    "payload-cms-mcp": "./server.js"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"No tests specified\"",
     "start": "node server.js",
     "dev": "node server.js",
     "local": "node server.js",
